bot: add AI news digest (2026-02-24)

--- a/src/content/news-and-updates/2026-02-24-ai-digest.md
+++ b/src/content/news-and-updates/2026-02-24-ai-digest.md
@@ -1,29 +1,25 @@
 ---
-title: "AI digest: Agents break free from loops"
+title: "AI digest: Big tech fights get messy"
 date: 2026-02-24
-tags: [ai-news, digest, agents]
-summary: "DeepMind evolves algorithms automatically, OpenAI fixes voice latency, and agents finally escape simple ReAct patterns."
+tags: [ai-news, digest]
+summary: "Chinese labs accused of data theft, OpenAI declares war on benchmarks, and voice bots spread lies with confidence."
 draft: false
 ---
 
-We're seeing the infrastructure mature. Less hype about capabilities, more focus on making things actually work.
+The gloves are coming off in AI land. Data theft accusations are flying, benchmarks are under fire, and even voice assistants can't agree on basic facts.
 
-## DeepMind lets algorithms evolve themselves
+## Anthropic accuses Chinese labs of systematic data theft
 
-Google DeepMind researchers used semantic evolution to automatically create [better variants of reinforcement learning algorithms](https://www.marktechpost.com/2026/02/24/google-deepmind-researchers-apply-semantic-evolution-to-create-non-intuitive-vad-cfr-and-shor-psro-variants-for-superior-algorithmic-convergence/) like CFR and PSRO. Instead of humans manually tweaking parameters, they let the system explore the combinatorial space and discover non-intuitive improvements. This matters because it shows we can automate the research process itself, not just the applications.
+[Anthropic claims](https://the-decoder.com/anthropic-accuses-deepseek-moonshot-and-minimax-of-stealing-claudes-ai-data-through-16-million-queries/) Deepseek, Moonshot, and MiniMax used 16 million queries to systematically extract Claude's capabilities for their own models. This is the kind of accusation that makes lawyers rich and engineers nervous. If true, it shows how easy it is to distill knowledge from API calls at scale.
 
-## RAG wins against context stuffing
+## OpenAI wants to kill the coding benchmark everyone uses
 
-Despite massive context windows, [selective retrieval still beats dumping everything into prompts](https://www.marktechpost.com/2026/02/24/rag-vs-context-stuffing-why-selective-retrieval-is-more-efficient-and-reliable-than-dumping-all-data-into-the-prompt/). Turns out bigger context doesn't solve the fundamental problems of relevance and cost. Smart filtering remains more important than raw capacity, which makes sense if you've tried to get useful answers from a model drowning in irrelevant data.
+OpenAI is pushing to [retire SWE-bench Verified](https://the-decoder.com/openai-wants-to-retire-the-ai-coding-benchmark-that-everyone-has-been-competing-on/), claiming the popular coding benchmark is broken and models have seen the answers during training. Translation: we've all been measuring memorization, not actual coding ability. This feels like sour grapes, but they're probably right about benchmark contamination being a real problem.
 
-## OpenAI ships WebSocket mode for voice
+## Voice bots happily spread false information
 
-OpenAI launched [WebSocket connections for real-time voice interactions](https://www.marktechpost.com/2026/02/23/beyond-simple-api-requests-how-openais-websocket-mode-changes-the-game-for-low-latency-voice-powered-ai-experiences/), ditching the clunky STT-LLM-TTS pipeline. This is the kind of infrastructure upgrade that makes voice AI actually usable instead of feeling like a demo. The latency improvements should make conversational agents feel more natural.
+Researchers found that [ChatGPT Voice and Gemini Live repeated false claims](https://the-decoder.com/chatgpt-and-gemini-voice-bots-are-easy-to-trick-into-spreading-falsehoods/) up to 50% of the time when asked. Meanwhile, Amazon's Alexa refused to spread any false information. Turns out being stubborn and unhelpful might actually be a safety feature.
 
-## Composio builds better agent orchestration
+## DeepCoder claims O3-mini performance at 14B parameters
 
-Composio open-sourced [Agent Orchestrator to move beyond simple ReAct loops](https://www.marktechpost.com/2026/02/23/composio-open-sources-agent-orchestrator-to-help-ai-developers-build-scalable-multi-agent-workflows-beyond-the-traditional-react-loops/). Finally, someone's tackling the brittleness problem that kills most agent deployments. Multi-agent workflows need proper orchestration, not just chains of think-act-observe cycles that break under real-world complexity.
-
-## Anthropic calls out Chinese model distillation
-
-Anthropic accused DeepSeek, Moonshot, and MiniMax of [using 24,000 fake accounts to distill Claude's capabilities](https://techcrunch.com/2026/02/23/anthropic-accuses-chinese-ai-labs-of-mining-claude-as-us-debates-ai-chip-exports/) through 16 million queries. This is the new normal for model competition. Export controls on chips just mean everyone's competing on data extraction and training efficiency instead.
+A new [open-source coding model called DeepCoder](https://buttondown.com/ainews/archive/ainews-deepcoder-a-fully-open-source-14b-coder-at/) allegedly matches O3-mini performance with just 14 billion parameters. If the benchmarks hold up (see story above), this could be a real breakthrough in efficient coding models. Big if though.
