bot: add AI news digest (2026-02-25)

--- a/src/content/news-and-updates/2026-02-25-ai-digest.md
+++ b/src/content/news-and-updates/2026-02-25-ai-digest.md
@@ -1,25 +1,29 @@
 ---
-title: "AI digest: Big deals and bigger fights"
+title: "AI digest: Models get weird, agents get real"
 date: 2026-02-25
-tags: [ai-news, digest, hardware, enterprise]
-summary: "Meta throws $100B at AMD while Anthropic accuses Chinese labs of data theft."
+tags: [ai-news, digest, diffusion-models, ai-agents, model-theft]
+summary: "New architectures challenge transformer dominance while Chinese labs face theft accusations and AI agents start handling real work."
 draft: false
 ---
 
-The AI world is splitting into two camps: those making massive hardware bets and those fighting over who's stealing from whom.
+The AI world is splitting between architectural experiments and practical deployments. Meanwhile, the drama between US and Chinese labs is heating up.
 
-## Meta bets $100B on AMD to break Nvidia's grip
+## Liquid AI ditches pure transformers for hybrid approach
 
-[Meta struck a massive deal with AMD](https://techcrunch.com/2026/02/24/meta-strikes-up-to-100b-amd-chip-deal-as-it-chases-personal-superintelligence/) for up to $100 billion in AI chips over multiple years, including a 160 million share warrant. This mirrors AMD's earlier OpenAI deal and shows the desperation to diversify away from Nvidia's stranglehold. Six gigawatts of compute power suggests Meta is serious about its "personal superintelligence" push, though whether AMD can actually deliver at scale remains the big question.
+[Liquid AI released LFM2-24B-A2B](https://www.marktechpost.com/2026/02/25/liquid-ais-new-lfm2-24b-a2b-hybrid-architecture-blends-attention-with-convolutions-to-solve-the-scaling-bottlenecks-of-modern-llms/), a 24B parameter model that mixes attention mechanisms with convolutions to solve memory bottlenecks. This matters because everyone's hitting the limits of pure transformer scaling. The hybrid approach could be the path forward when throwing more compute at the problem stops working.
 
-## Anthropic accuses Chinese labs of systematic data theft
+## Inception's Mercury 2 does diffusion for text reasoning
 
-[Anthropic claims DeepSeek, Moonshot, and MiniMax ran 16 million queries](https://the-decoder.com/anthropic-accuses-deepseek-moonshot-and-minimax-of-stealing-claudes-ai-data-through-16-million-queries/) to systematically extract Claude's capabilities for training their own models. This isn't just casual scraping, it's industrial-scale knowledge distillation. The timing is perfect given rumors that DeepSeek's next model was trained on banned Blackwell chips and could shake up the market again.
+Instead of generating text token by token, [Mercury 2 refines entire passages in parallel using diffusion](https://the-decoder.com/inception-launches-mercury-2-the-first-diffusion-based-language-reasoning-model/), making it 5x faster than conventional models. Diffusion worked for images, so applying it to language reasoning makes sense. Early days, but this could change how we think about text generation.
 
-## Pentagon vs Anthropic hits the deadline
+## Anthropic accuses Chinese labs of systematic Claude theft
 
-[The Pentagon gave Anthropic until Friday](https://techcrunch.com/2026/02/24/anthropic-wont-budge-as-pentagon-escalates-ai-dispute/) to loosen AI guardrails or face penalties. Anthropic isn't budging, which raises serious questions about government leverage when dealing with AI vendors. This could set precedent for how much control agencies actually have over commercial AI systems they want to use.
+[Anthropic claims DeepSeek, Moonshot, and MiniMax used 16 million queries across 24,000 fake accounts](https://the-decoder.com/anthropic-accuses-deepseek-moonshot-and-minimax-of-stealing-claudes-ai-data-through-16-million-queries/) to systematically extract Claude's capabilities for their own training. This isn't surprising but the scale is wild. Expect more of these accusations as the competition gets nastier.
 
-## Alibaba's Qwen 3.5 proves smaller can be smarter
+## Claude jumps between Office apps autonomously
 
-[Qwen's new medium-sized models](https://www.marktechpost.com/2026/02/24/alibaba-qwen-team-releases-qwen-3-5-medium-model-series-a-production-powerhouse-proving-that-smaller-ai-models-are-smarter/) focus on architectural efficiency over raw parameter count. This matches the broader trend away from "bigger is always better" toward models that actually work in production. Smart move while everyone else burns cash on massive clusters.
+[Anthropic now lets Claude switch between Excel and PowerPoint independently](https://the-decoder.com/claude-now-works-independently-across-excel-and-powerpoint/), running analysis in one app then building presentations from the results in another. This is the kind of practical agent work that actually saves people time instead of just being a demo.
+
+## OpenAI wants to kill the coding benchmark everyone uses
+
+[OpenAI says SWE-bench Verified is broken](https://the-decoder.com/openai-wants-to-retire-the-ai-coding-benchmark-that-everyone-has-been-competing-on/) because most tasks reject correct solutions and models have likely seen the answers during training. Fair point, but convenient timing when their models aren't winning anymore.
